[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/59.ogg" type="AudioStream" id=1]
[ext_resource path="res://Dragon.gd" type="Script" id=2]
[ext_resource path="res://assets/Dragon/tile006.png" type="Texture" id=3]
[ext_resource path="res://assets/Dragon/tile004.png" type="Texture" id=4]
[ext_resource path="res://assets/Dragon/tile003.png" type="Texture" id=5]
[ext_resource path="res://assets/Dragon/tile005.png" type="Texture" id=6]
[ext_resource path="res://assets/Dragon/tile007.png" type="Texture" id=7]
[ext_resource path="res://assets/Dragon/tile008.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "dead",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.6104, 45.4687 )

[sub_resource type="Animation" id=4]
resource_name = "Dead"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.145185, 2.51607 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 51.1232, -3.45707e-06 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 6.0

[node name="Timer3" type="Timer" parent="."]
wait_time = 4.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 4 )
anims/Hit = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -56, 32 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -56, 0 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( -56, -24 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
